--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <p>
         This is a simple tutorial forcreating a PWA application.
     </p>
+    <a style="text-decoration:none;color:skyblue;" href="/tables.html">tables</a>
     <script>
         // Register the Service Worker
         console.log("hello()");
