--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
         This is a simple tutorial forcreating a PWA application.
     </p>
     <a style="text-decoration:none;color:skyblue;" href="/pwa/tables.html">tables</a>
+    <a style="text-decoration:none;color:red;" href="/pwa/speak.html">speak</a>
     <script>
         // Register the Service Worker
         console.log("hello()");
