--- a/tables.html
+++ b/tables.html
@@ -5,6 +5,9 @@
         <meta name="viewport" content="width=device-width" />
         <title>html tables</title>
         <style type="text/css" media="all">
+            html{
+                background-color:black;
+            }
             table{
                 padding: 0px;
                 background: linear-gradient(#FF5200,#FF001A);
